// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/jsonnet-bundler/artifacts performs lock file maintenance 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "Updated jsonnetfile.lock.json",
      "path": "jsonnetfile.lock.json",
      "type": "addition",
    },
  },
]
`;

exports[`modules/manager/jsonnet-bundler/artifacts performs lock file maintenance 2`] = `
Array [
  Object {
    "cmd": "jb update",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/jsonnet-bundler/artifacts returns error when jb update fails 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "jsonnetfile.lock.json",
      "stderr": "jb released the magic smoke",
    },
  },
]
`;

exports[`modules/manager/jsonnet-bundler/artifacts returns error when jb update fails 2`] = `
Array [
  Object {
    "cmd": "jb update",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/jsonnet-bundler/artifacts returns null if there are no changes 1`] = `Array []`;

exports[`modules/manager/jsonnet-bundler/artifacts updates the vendor dir when dependencies change 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "Updated jsonnetfile.json",
      "path": "jsonnetfile.json",
      "type": "addition",
    },
  },
  Object {
    "file": Object {
      "contents": "Updated jsonnetfile.lock.json",
      "path": "jsonnetfile.lock.json",
      "type": "addition",
    },
  },
  Object {
    "file": Object {
      "contents": "New foo/main.jsonnet",
      "path": "vendor/foo/main.jsonnet",
      "type": "addition",
    },
  },
  Object {
    "file": Object {
      "contents": "New bar/main.jsonnet",
      "path": "vendor/bar/main.jsonnet",
      "type": "addition",
    },
  },
  Object {
    "file": Object {
      "path": "vendor/baz/deleted.jsonnet",
      "type": "deletion",
    },
  },
]
`;

exports[`modules/manager/jsonnet-bundler/artifacts updates the vendor dir when dependencies change 2`] = `
Array [
  Object {
    "cmd": "jb update https://github.com/foo/foo.git ssh://git@github.com/foo/foo.git/bar",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
